--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Larry156's Website
-description: It's happening
+title: lyao6104's Website
+description: The GitHub Pages site for lyao6104.
