--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: lyao6104's Website
 description: The GitHub Pages site for lyao6104.
+exclude:
+  - Makefile
+  - _utils
